# SwiftLang

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
inc/: AlgebraicEvaluator.h  Clear.h  ConsoleClear.h  ConsoleExit.h  ConsolePrint.h  Context.h  Echo.h  Error.h  Evaluator.h  Exit.h  FileRead.h  ICmd.h  Lexer.h  Node.h  Parser.h  PathChange.h  PathPrint.h  ScopeUnit.h  Shell.h  Token.h  UniversalCopy.h  UniversalList.h  UniversalRemove.h
samples/: getprimefactors.sl  input.in  is_prime.sl
samples/binary-search/: binary-search.sl  input.in
samples/bubble-sort/: bubblesort.sl
samples/get-prime-factors/: getprimefactors.sl
samples/is-prime/: is-prime.sl
samples/sieve-of-eratosthenes/: sieve.sl
scripts/: build.sh  buildnrun.sh  init.sh  run.sh  setup.sh
src/: AlgebraicEvaluator.cpp  Error.cpp  Evaluator.cpp  ICmd.cpp  Lexer.cpp  Parser.cpp  Shell.cpp  Token.cpp
tests/: LexerTestSuite.cpp  LexerTestSuite.h  LexerTests.cpp  ParserTestSuite.cpp  ParserTestSuite.h  ParserTests.cpp  lexer-test-suite.cpp  lexer-tests.cpp
